--- a/calligraphy/build.gradle
+++ b/calligraphy/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-  provided 'com.android.support:appcompat-v7:22.2.0'
+  compile 'com.android.support:appcompat-v7:22.2.0'
 }
 
 apply from: rootProject.file('gradle/deploy.gradle')
